# School-OpenGL-Project

./: .gitattributes  .gitignore  CMake-Assimp-DLL-Study-Notes.md  CMakeLists.txt  Git-and-Environment-Setup-Notes.md  README.md  vcpkg.json
include/Model/: mesh.h  model.h
include/camera/: camera.h
include/glad/: glad.h
include/ourshader/: Shader.h
resource/Models/: CleModel.fbx
shaders/: shader.fs  shader.vs
src/: glad.c  main.cpp
